[gd_scene load_steps=3 format=3 uid="uid://b64eogwqgw02t"]

[ext_resource type="Script" path="res://src/scenes/UI/ui.gd" id="1_w5855"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dy5d"]
bg_color = Color(0.365632, 0.14354, 0.123519, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(3.865, 2.7)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 860.0
offset_bottom = 860.0
script = ExtResource("1_w5855")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.282
anchor_bottom = 0.273
offset_right = 0.0999985
offset_bottom = 0.150002
theme_override_styles/panel = SubResource("StyleBoxFlat_1dy5d")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.154
offset_bottom = 0.0579987

[node name="turn_time" type="RichTextLabel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 14
text = "Turn time () "

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
min_value = 0.4
max_value = 20.0
step = 0.001
value = 1.0
exp_edit = true

[node name="Button" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.52
anchor_top = 0.545
anchor_right = 0.976
anchor_bottom = 0.797
offset_left = -0.0400085
offset_top = -0.0350037
offset_right = 0.0479889
offset_bottom = -0.0310059
mouse_filter = 1
text = "Finish "

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.024
anchor_top = 0.545
anchor_right = 0.48
anchor_bottom = 0.797
offset_left = -0.0480001
offset_top = -0.0350037
offset_right = 0.0399971
offset_bottom = -0.0310059
mouse_filter = 1
toggle_mode = true
text = "Info"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.305
anchor_top = 0.019
anchor_right = 0.973
anchor_bottom = 0.05
offset_left = -0.300018
offset_top = -0.34
offset_right = 0.219971
max_value = 1.0
show_percentage = false

[connection signal="mouse_entered" from="Panel" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_mouse_exited"]
[connection signal="value_changed" from="Panel/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_finished_presse"]
[connection signal="toggled" from="Panel/Button2" to="." method="_on_button_2_toggled"]
